--- a/.github/workflows/deploy-prometheus-grafana.yml
+++ b/.github/workflows/deploy-prometheus-grafana.yml
@@ -1,9 +1,9 @@
-name: Github Actions workflow for deployment prometheus on k3s cluster
+name: Github Actions workflow for deployment Grafana on k3s cluster with Prometheus
 on:
   workflow_dispatch
 
 jobs:
-  deploy-prometheus:
+  deploy-prometheus-grafana:
     name: Deploy prometheus job
     runs-on: ubuntu-latest
     steps:
