fix: correct name of the job

--- a/.github/workflows/deploy-prometheus-grafana.yml
+++ b/.github/workflows/deploy-prometheus-grafana.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   deploy-prometheus-grafana:
-    name: Deploy prometheus job
+    name: Deploy Grafana job
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
